spacing from config, fixed color and check spacing

--- a/scss/gtk-3.0/widgets/_menubar.scss
+++ b/scss/gtk-3.0/widgets/_menubar.scss
@@ -1,17 +1,18 @@
 @use '../colors';
+@use '../config';
 
 menubar {
   background: colors.$surface-strongest;
 
   menuitem {
-    padding: 5px;
+    padding: config.$spacing-medium;
 
     &:hover {
-      background: colors.$surface-strong;
+      background: colors.$white-weakest;
     }
 
     check, radio {
-      margin: 0.4em;
+      margin-right: config.$spacing-medium;
     }
   }
 }
